# RAG-Chat

./: app.py  pyproject.toml  readme.md  requirements.txt
docs/: Desafio_PROJ_858624688_DOUTOR_RADIX_Gilvan Wanderley de Farias.docx
services/: __init__.py  doc_handler.py  retrival_augmented_gen.py  writer_service.py
